Dummy_Package_for_scratch_org/main/default/objects/Branch_Management_Permission__c/fields/Allow_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Deployments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Deployments</label>
    <type>Checkbox</type>
</CustomField>