Dummy_Package_for_scratch_org/main/default/objects/Branch_Management_Permission__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipName>Branch_Management_Permissisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>