Dummy_Package_for_scratch_org/main/default/objects/Branch_Management_Permission__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Management_Permissisions</relationshipName>
    <type>Lookup</type>
</CustomField>